samples/dcmdir:
+ Fix remove operation (ArrayOutOfBoundsException)
+ Fix load of readme file configuration parameter

ENHANCEMENTS:
dcm4che API:
+ add org.dcm4cheri.data.DicomObject#vm(int)
dcmdir sample:
+ command -c create root directory, if no such directory exists
+ add command -P dir-file: purge records from existing DICOMDIR file,
  with referenced files do not exist anymore

CHANGES:
dcm4che Impl:
+ DcmImageReaderConf: change default resource location of properties from
  /resources/DcmImageReader.properties to /DcmImageReader.properties
samples:
+ change resource location of Resource Bundles from
  resources/BUNDLE.properties to BUNDLE.properties

-------------------------------------------------------------------------------
dcm4che 1.0.1 -  - Changes since dcm4che 1.0.0
-------------------------------------------------------------------------------
dcmrcv Sample Application:
+ change default File ID scheme in dcmrcv demo application
  from StudyDate,SeriesNumber,InstanceNumber
  to StudyDate,StudyID,SeriesNumber,InstanceNumber
+ change(generalize) commandline syntax for replacing attribute values in
  received objects to --set=TAG:VAL.
dcmsnd Sample Application:
+ change(generalize) commandline syntax for replacing attribute values in
  transmitted objects to --set=TAG:VAL.
+ add --poll-dir option (may be used for as DICOM router - in combination with
  dcmrcv --dest DIR).
new syslog Sample Application:
+ to send/generate syslog messages
new mppssnd Sample Application:
+ to send MPPS messages to remote DICOM node
new Image I/O compatible DICOM ImageWriter (contributed by Dr. Hacklaender)
+ org.dcm4che.imageio.plugins.DcmImageWriteParam
+ org.dcm4cheri.imageio.plugins.DcmImageWriteParamImpl
+ org.dcm4cheri.imageio.plugins.DcmImageWriter
+ org.dcm4cheri.imageio.plugins.DcmImageWriterSpi
new simple HL7 Parser:
+ org.dcm4che.hl7.*
+ org.dcm4cheri.hl7.*
dcm4che API:
+ org.dcm4cheri.data.DicomObject#getInteger

Bug Fixes: